fixed the overflow of the order container

--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -8,39 +8,49 @@ section{
     
      
 }
-.cart-wrapper{
-    @include dFlex(flex, column, center, center, wrap, 16px);
-    position: relative;
+.cart-wrapper {
+  @include dFlex(flex, column, stretch, stretch, nowrap, 0); 
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.order {
+  @include dFlex(flex, column, flex-start, flex-start, nowrap, 16px);
+  flex: 1;                 
+  overflow-y: auto;        
+  padding-top: 40px;
+
+  > .item-div {
     width: 100%;
-    height: 100%;
-
-    
-   
+    flex: 0 0 auto;        
+  }
 }
+
 .amount-div{
- @include dFlex(flex, row, center, start, wrap, 16px);
+    @include dFlex(flex, row, center, start, nowrap 0px);
 }
 
-.payment-div{
-    @include dFlex(flex, row, center, center, wrap, 16px);
-        width: 100%;
-        position: absolute;
-        bottom : 20px;
-        
 
-        .total-price{
-            font-size: 18px;
-        }
+.payment-div {
+  @include dFlex(flex, column, center, center, nowrap, 16px);
+  width: 100%;
+  padding: 20px 0;         
+  border-top: 1px solid #ccc; 
+  background: white;        
 
-        .pay-button{
-        width: 80%;
-        height: 80px;
-        background-color: green;
-        color: white;
-        font-size: 30px;
-        border: 1px solid white;
-        border-radius: 24px;
-        
-    }
+  .total-price {    
+    font-size: 18px;
+  }
+
+  .pay-button {
+    width: 80%;
+    height: 80px;
+    background-color: green;
+    color: white;
+    font-size: 30px;
+    border: 1px solid white;
+    border-radius: 24px;
+  }
         
     }
